[package]
name = "up_budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["alloc"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
pkg-config = "0.3.30"
reqwest = { vesion = "0.12.4", features = ["json", "blocking"]}
serde = "1.0.199"
tokio = { version = "1.37.0", features = ["full"]}
